8192992: Test8007294.java failed: attempted to spill a non-spillable item

Fix bugs in schedule_late that forces load to early

Reviewed-by: kvn, thartmann